--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+greenlet==2.0.2
 numpy==1.24.3
 pandas==2.0.1
 psycopg2==2.9.6
@@ -5,4 +6,6 @@ PuLP==2.7.0
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
+SQLAlchemy==2.0.15
+typing_extensions==4.6.0
 tzdata==2023.3
