Unify decision variables.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "justMyCode": true,
             "env": {
                 "CSCUSER": "csc_admin",
-                "CSCPASSWORD": "7!dCA%26cbQ",
+                "CSCPASSWORD": "iXMRMKWNQbvdCCg19zVy",
                 "CSCHOST": "supply-chain.cspxerxok0ew.eu-west-2.rds.amazonaws.com",
                 "CSCPORT": "5432"
             },
