--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,48 @@
+appnope==0.1.3
+asttokens==2.2.1
+backcall==0.2.0
+boto3==1.26.139
+botocore==1.29.139
+colorlog==6.7.0
+comm==0.1.3
+debugpy==1.6.7
+decorator==5.1.1
+et-xmlfile==1.1.0
+executing==1.2.0
+greenlet==2.0.2
+ipykernel==6.23.1
+ipython==8.13.2
+jedi==0.18.2
+jmespath==1.0.1
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
 numpy==1.24.3
+openpyxl==3.1.2
+packaging==23.1
 pandas==2.0.1
-psycopg2-binary==2.9.6
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.5.1
+prompt-toolkit==3.0.38
+psutil==5.9.5
+psycopg2==2.9.6
+ptyprocess==0.7.0
 PuLP==2.7.0
+pure-eval==0.2.2
+Pygments==2.15.1
 python-dateutil==2.8.2
 pytz==2023.3
+pyzmq==25.0.2
+s3transfer==0.6.1
 six==1.16.0
 SQLAlchemy==2.0.15
-typing_extensions==4.6.1
+stack-data==0.6.2
+tornado==6.3.2
+traitlets==5.9.0
+typing_extensions==4.6.0
 tzdata==2023.3
+urllib3==1.26.16
+wcwidth==0.2.6
