--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,13 +30,20 @@
             "justMyCode": true
         },
         {
-            "name": "Python: Profit Maximiser",
+            "name": "Python: Run Profit Max App",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/src/optimisers/profit_maximiser.py",
+            "program": "${workspaceFolder}/src/app_profit_max.py",
             "cwd": "${workspaceFolder}/src",
             "console": "integratedTerminal",
-            "justMyCode": true
-        }
+            "justMyCode": true,
+            "env": {
+                "CSCUSER": "csc_admin",
+                "CSCPASSWORD": "iXMRMKWNQbvdCCg19zVy",
+                "CSCHOST": "supply-chain.cspxerxok0ew.eu-west-2.rds.amazonaws.com",
+                "CSCPORT": "5432",
+                "DEBUG": "True"
+            },
+        },
     ]
 }
